--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -41,5 +41,29 @@
    height: 50px;
     width: 50px;
     border-radius: 25px;
-
+}
+.nopaddingright{
+  padding-right:0px;
+}
+.paddingright15{
+  padding-right: 15px;
+}
+.paddingbottomimg{
+padding-bottom:10px;
+}
+.imgSize{
+  width:90px;
+  height:90px;
+}
+.add-wrap {
+  position:fixed;
+  bottom:0;
+ left:200rpx;
+  display:flex;
+  width:100%;
+  justify-content:center;
+}
+.add-wrap image {
+  width:64px;
+  height:64px;
 }
